[gd_scene load_steps=2 format=3 uid="uid://d0fnrkne5c8xp"]

[ext_resource type="Script" path="res://models/sim_score_board/scripts/sim_score_board.gd" id="1_d6yfj"]

[node name="SimScoreBoard" type="Node2D"]
script = ExtResource("1_d6yfj")

[node name="GridContainer" type="GridContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
columns = 3

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
text = "-"

[node name="LabelHome" type="Label" parent="GridContainer"]
layout_mode = 2
text = "home"

[node name="LabelAway" type="Label" parent="GridContainer"]
layout_mode = 2
text = "away"

[node name="LabelPoint" type="Label" parent="GridContainer"]
layout_mode = 2
text = "point"

[node name="LabelPointHome" type="Label" parent="GridContainer"]
layout_mode = 2
text = "x"

[node name="LabelPointAway" type="Label" parent="GridContainer"]
layout_mode = 2
text = "x"

[node name="LabelGame" type="Label" parent="GridContainer"]
layout_mode = 2
text = "game"

[node name="LabelGameHome" type="Label" parent="GridContainer"]
layout_mode = 2
text = "x"

[node name="LabelGameAway" type="Label" parent="GridContainer"]
layout_mode = 2
text = "x"

[node name="LabelSet" type="Label" parent="GridContainer"]
layout_mode = 2
text = "set"

[node name="LabelSetHome" type="Label" parent="GridContainer"]
layout_mode = 2
text = "x"

[node name="LabelSetAway" type="Label" parent="GridContainer"]
layout_mode = 2
text = "x"

[node name="LabelMatch" type="Label" parent="GridContainer"]
layout_mode = 2
text = "match"

[node name="LabelMatchHome" type="Label" parent="GridContainer"]
layout_mode = 2
text = "home"

[node name="LabelMatchAway" type="Label" parent="GridContainer"]
layout_mode = 2
text = "away"
